Fix alignment for column border

--- a/src/components/Cover/Content/MarketSales.scss
+++ b/src/components/Cover/Content/MarketSales.scss
@@ -11,7 +11,7 @@
 
 			.title-wrapper {
 				border-right: 2px solid $black;
-				margin-right: -1px;
+				margin-right: -2px;
 			}
 
 			.sub-section-title {
@@ -36,7 +36,7 @@
 
 				&.retail {
 					border-right: 2px solid $black;
-					margin-right: -1px;
+					margin-right: -2px;
 					justify-content: flex-end;
 				}
 
